<resources>
    <string name="app_name">TaxiService</string>
    <string name="register">Register</string>
    <string name="login">Log in</string>
    <string name="action">Choose an action</string>
    <string name="name">Name</string>
    <string name="lastname">Email</string>
    <string name="phoneNumber">Phone number</string>
    <string name="pass">Password</string>
    <string name="passenger">Passenger</string>
    <string name="driver">Driver</string>
    <string name="hintName">enter your name</string>
    <string name="hintLastName">enter your email</string>
    <string name="hintPhoneNumber">enter your phone number</string>
    <string name="hintPassword">enter your password</string>
    <string name="chooseYou">Who are you?</string>
    <string name="lengthPassword">Password length is less than 6 characters</string>
    <string name="title_activity_passager_google">PassagerActivityGoogle</string>
    <string name="titleBottomSheet">Where are we going?</string>
    <string name="google_map_api_key">AIzaSyCIImlRY7oKERtUGcHdTap5e0folYDIlsM</string>
    <string name="butSetRoute">Set Route</string>
    <string name="google_map_api_key_for_request">AIzaSyCeBDjHnro9goaDzqiV5kY7FSkVCrXJe54</string>
    <string name="title_activity_driver_google">DriverActivityGoogle</string>
    <string name="butMakeAnOrder">Make an order</string>
    <string name="cancel">Cancel</string>
    <string name="findDriver">We are looking for a driver for you</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_driver_is_found">DriverIsFound</string>
</resources>